--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-ejs-layouts": "^2.5.1"
+    "express-ejs-layouts": "^2.5.1",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
